Fix background color on small devices

--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -4,8 +4,11 @@
 		height: 90vh;
 		margin-top: 40px;
 		overflow: hidden;
-		background: #fff;
 	}
+}
+
+.dashboardContainer {
+	background: #fff;
 }
 
 body {
